# tap-gitlab

./: README.md  dbt_project.yml  pyproject.toml
models/base/: gitlab_branches.sql  gitlab_commits.sql  gitlab_epic_issues.sql  gitlab_epics.sql  gitlab_group_labels.sql  gitlab_group_members.sql  gitlab_group_milestones.sql  gitlab_groups.sql  gitlab_issues.sql  gitlab_merge_requests.sql  gitlab_project_labels.sql  gitlab_project_members.sql  gitlab_project_milestones.sql  gitlab_projects.sql  gitlab_releases.sql  gitlab_tags.sql  gitlab_users.sql
models/transform/: gitlab_epics_overview.sql  gitlab_issues_per_epic.sql  gitlab_issues_per_label.sql  gitlab_labels.sql  gitlab_merge_requests_per_label.sql  gitlab_milestones.sql  gitlab_open_issues_not_in_epic.sql  gitlab_stats_merged_mrs_per_month.sql  gitlab_stats_per_label.sql  gitlab_stats_per_project.sql  gitlab_stats_per_user.sql
tap_gitlab/: __init__.py
tap_gitlab/schemas/: file.json  jobs.json
