[project]
name = "tap-gitlab"
version = "0.10.0"
description = "Singer.io tap for extracting data from the GitLab API"
authors = [
    { name = "Meltano Team && Stitch" },
]
readme = "README.md"
url = "https://singer.io"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
license = "AGPL-3.0"
license-files = [
    "LICENSE",
]
dependencies = [
    "singer-python==6.1.0",
    "requests==2.32.3",
    "strict-rfc3339==0.7",
    "backoff==2.2.1",
]
requires-python = ">=3.8"

[project.scripts]
tap-gitlab = "tap_gitlab:main"

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling==1.27",
]

[tool.uv]
build-constraint-dependencies = ["setuptools<78"]
